<resources>
    <string name="app_name">A2 Convert</string>
    <string name="classify">All photo collections</string>
    <string name="home_connect">1.Connect</string>
    <string name="home_send">3.Send</string>
    <string name="home_select">2.Select</string>
    <string name="home_convert">4.Convert</string>
    <string name="auto_slide_show">Auto Slide Show</string>
    <string name="setting">Setting</string>
    <string name="add_new_classify">New classify</string>
    <string name="please_enter_name">Please input name</string>
    <string name="add_classify_success">Add classify success</string>
    <string name="attention">Note</string>
    <string name="are_sure_show">Are you sure show \'</string>
    <string name="are_sure_show_after">\' folder pictures</string>
    <string name="illegal_character">Illegal character</string>
    <string name="add_classify_fail">Add failed !!!</string>
    <string name="delete_failed">Delete failed !!!</string>
    <string name="delete_success">Delete success</string>
    <string name="most_nine">Up to 9 images can be selected</string>
    <string name="hasno_pic">The image address is empty</string>
    <string name="are_sure_delete">Are you sure to delete\'</string>
    <string name="are_sure_delete_after">\' the folder and pictures</string>
    <string name="folder_not_exist">File not exist</string>
    <string name="copy_failed">Picture add failed !!!</string>
    <string name="loading">Loading...</string>
    <string name="no_pic">No pictures</string>
    <string name="sending">Sending...</string>
    <string name="send_success">Send success</string>
    <string name="send_fail">Send failed !!!</string>
    <string name="connect_lost">Connect failed !!!</string>
    <string name="connecting">Connecting</string>
    <string name="connect_success">Connect success</string>
    <string name="switching_time">Switching Time</string>
    <string name="hue_offset">Hue offset</string>
    <string name="sat_offset">Sat offset</string>
    <string name="bright_offset">Bright offset</string>
    <string name="contrast_offset">Contrast offset</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="input_empty">Please enter the content</string>
    <string name="input_range">The input content is in</string>
    <string name="input_error">Illegal input</string>
    <string name="set_play_interval">Set playback duration</string>
    <string name="play_interval_msg">The minimum playback time is 60 seconds</string>
    <string name="set_sat_msg">The saturation adjustment range is from -100 to 100</string>
    <string name="set_sat">Set sat offset</string>
    <string name="set_hue">Set hue offset</string>
    <string name="set_hue_msg">The color tone adjustment offset range is 0 to 360</string>
    <string name="set_contrast_msg">Contrast adjustment offset within the range of -100 to 100</string>
    <string name="set_contrast">Set contrast offset</string>
    <string name="set_bright">Set bright offset</string>
    <string name="set_gama">Set gama offset</string>
    <string name="set_bright_msg">The brightness adjustment offset range is -100 to 100</string>
    <string name="set_gama_msg">Gamma value adjustment value is within the range of 0 to 2</string>
    <string name="reset">Reset</string>
    <string name="reset_confirm">Are you sure to reset config</string>
    <string name="set_success">Set success</string>
    <string name="set_fail">Set failed !!!</string>
    <string name="automatic_mode">Automatic mode</string>
    <string name="gama_offset">Set gama</string>
    <string name="manual_mode">Manual mode</string>
    <string name="switch_to_auto">Switch to automatic mode</string>
    <string name="switch_to_manual">Switch to manual mode</string>
    <string name="filter_illegal_pic">Illegal images have been filtered out</string>
    <string name="converting">Converting...</string>
    <string name="need_photo_permission">Camera permission required</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="restart_app">The app needs to be restarted to take effect</string>
    <string name="clear_data">Clear data</string>
    <string name="clear_success">Clear successfully</string>
    <string name="clear_fail">Clearing failed!!!</string>
    <string name="clear_data_msg">This operation will clear all historical data</string>
    <string name="get_log">Extraction Log</string>
    <string name="get_log_msg">Are you sure you want to extract the logs of Raspberry Pi？</string>
    <string name="extraction_fail">Extraction failed !!!</string>
    <string name="log_extraction_success">Log extraction successful, saved in A2 directory</string>
    <string name="pic_upload">图片上传</string>
    <string name="step_1">1.连接</string>
    <string name="step_2">2.选择</string>
    <string name="step_3">3.发送</string>
    <string name="step_4">4.转换</string>
    <string name="play_setting">播放设置</string>
    <string name="pre">上一张</string>
    <string name="next">下一张</string>
    <string name="remote_control">远程操控</string>

</resources>